--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" package="com.myapp">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -11,6 +11,7 @@
 
 
     <application
+        android:hardwareAccelerated="true"
         android:allowBackup="false"
         android:name=".MainApplication"
         android:icon="@mipmap/ic_launcher"
@@ -35,10 +36,9 @@
         </activity>
 
         <!-- Service declaration -->
-        <service android:name=".ForegroundService" />
-<!--            android:foregroundServiceType="location"-->
-<!--        android:exported="true"-->
-<!--        android:stopWithTask="false"-->
-
+        <service android:name=".ForegroundService" 
+            android:foregroundServiceType="location"
+        android:exported="true"
+        android:stopWithTask="false" />
     </application>
 </manifest>
