--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "node-stream-zip": "^1.15.0",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-fs": "^2.20.0",
     "react-native-get-location": "^4.0.1",
+    "react-native-permissions": "^4.1.5",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
